# SoulACP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  README_CN.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: basic_chat.py  multi_agent.py  session_management.py  streaming.py
src/soulacp/: __init__.py  binary.py  cache.py  config.py  meta.py  pool.py  protocol.py  registry.py  retry.py  session.py  session_store.py
src/soulacp/adapters/: __init__.py  amp_client.py  auggie_client.py  autohand_client.py  base_client.py  claude_client.py  cline_client.py  codebuddy_client.py  codex_client.py  copilot_client.py  copilot_ls_client.py  corust_client.py  crow_client.py  cursor_acp_client.py  cursor_client.py  deepagents_client.py  droid_client.py  fastagent_client.py  gemini_client.py  goose_client.py  junie_client.py  kilo_client.py  kimi_client.py  minion_client.py  nova_client.py  openclaw_client.py  opencode_client.py  pi_client.py  protocol.py  qoder_client.py  qwen_client.py  stakpak_client.py  vibe_client.py
src/soulacp/services/: __init__.py  fs_service.py  path_utils.py  terminal_service.py
tests/: conftest.py  test_binary.py  test_cache.py  test_config.py  test_imports.py  test_integration.py  test_integration_amp.py  test_integration_auggie.py  test_integration_autohand.py  test_integration_cline.py  test_integration_codebuddy.py  test_integration_codex.py  test_integration_copilot.py  test_integration_copilot_ls.py  test_integration_corust.py  test_integration_crow.py  test_integration_cursor_acp.py  test_integration_deepagents.py  test_integration_droid.py  test_integration_fastagent.py  test_integration_gemini.py  test_integration_goose.py  test_integration_junie.py  test_integration_kilo.py  test_integration_kimi.py  test_integration_minion.py  test_integration_nova.py  test_integration_opencode.py  test_integration_pi.py  test_integration_qoder.py  test_integration_qwen.py  test_integration_stakpak.py  test_integration_vibe.py  test_retry.py  test_rpc_error.py  test_services.py  test_session_store.py  test_spike_0_5_a_disconnect.py  test_stress_stdio.py
