[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulacp"
version = "0.1.5"
description = "Python ACP client library — connect to 29 AI coding agents with zero session overhead"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "AIXP Labs", email = "noreply@SoulACP.dev"}
]
keywords = ["acp", "agent-client-protocol", "claude-code", "gemini", "opencode", "openclaw", "cursor", "codex", "qwen-code", "kimi", "codebuddy", "cline", "copilot", "minion", "vibe", "nova", "crow", "amp", "auggie", "autohand", "corust", "deepagents", "droid", "fast-agent", "copilot-ls", "goose", "junie", "kilo", "pi-acp", "qoder", "stakpak", "ai-agent", "coding-agent", "soulacp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://soulacp.dev"
Repository = "https://github.com/AIXP-Labs/SoulACP"
Issues = "https://github.com/AIXP-Labs/SoulACP/issues"
Documentation = "https://soulacp.dev"
Changelog = "https://github.com/AIXP-Labs/SoulACP/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soulacp*"]

[tool.setuptools.package-data]
soulacp = ["py.typed"]

# --- Ruff ---
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# --- Coverage ---
[tool.coverage.run]
source = ["src/soulacp"]

[tool.coverage.report]
show_missing = true
